[gd_scene load_steps=4 format=3 uid="uid://dbgch822mxyge"]

[ext_resource type="Script" path="res://ui/dialogs/project_settings_dialog.gd" id="1_em3qd"]
[ext_resource type="FontFile" uid="uid://8flxsv3oaan4" path="res://assets/fonts/RobotoMono-VariableFont_wght.ttf" id="1_hwc7w"]
[ext_resource type="Theme" uid="uid://cuxsw2xavxj3d" path="res://themes/code_controls_theme.tres" id="2_at2ag"]

[node name="ProjectSettingsDialog" type="Window"]
title = "Project Settings"
position = Vector2i(0, 36)
size = Vector2i(400, 200)
transient = true
exclusive = true
unresizable = true
min_size = Vector2i(400, 200)
script = ExtResource("1_em3qd")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="StartupSceneLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Startup Scene"

[node name="StartupSceneDropdown" type="MenuButton" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_hwc7w")
text = "Select Scene"
alignment = 0

[node name="WindowWidthLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Window Width"

[node name="WindowWidth" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_at2ag")
min_value = 600.0
max_value = 1200.0
value = 600.0
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Window Height"

[node name="WindowHeight" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_at2ag")
min_value = 500.0
max_value = 900.0
value = 500.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
